@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<!-- $Id: news.html,v 1.20 2002/06/13 20:43:07 wcc Exp $ -->
+<!-- $Id: news.html,v 1.21 2002/06/14 03:46:47 wcc Exp $ -->
 
 <html>
   <head>
@@ -142,6 +142,10 @@
         </li>
 
         <li>
+          <p>&quot;.halfop&quot; and &quot;.dehalfop&quot; have been added.</p>
+        </li>
+
+        <li>
           <p>The &#39;optimise&#39; file system command was renamed to
           &#39;optimize&#39;. The old command will still be kept up to
           version 1.8.</p>
@@ -237,6 +241,11 @@
         <li>
           <p>A new &#39;wasop&#39; command was added to check if a user had
           op before a mode change.</p>
+        </li>
+
+        <li>
+          <p>&#39;washalfop&#39;, &#39;ishalfop&#39;, and &#39;botishalfop&#39;
+          have been added.</p>
         </li>
 
         <li>
