@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<!-- $Id: tcl-commands.html,v 1.14 2002/06/13 20:43:07 wcc Exp $ -->
+<!-- $Id: tcl-commands.html,v 1.15 2002/06/14 03:46:47 wcc Exp $ -->
 
 <html>
   <head>
@@ -1374,7 +1374,7 @@
 
         <dd>
           <p><strong>Returns:</strong> 1 if someone that just got
-          opped/deopped in the chan had halfop before the modechange; 0
+          halfopped/dehalopped in the chan had halfop before the modechange; 0
           otherwise</p>
 
           <p><strong>Module:</strong> irc</p>
