@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.advanced.conf,v 1.49 2002/06/04 05:11:10 wcc Exp $
+# $Id: eggdrop.advanced.conf,v 1.50 2002/06/14 03:46:47 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes many
 # settings that can be used to configure your bot.
@@ -454,12 +454,12 @@ channel add #lamest {
 #     3 Deop the user, give them the +d flag for the channel, kick, and ban them.
 #
 # aop-delay (minimum:maximum)
-# This is used for autoop and autovoice. If an op or voice joins a channel
-# while another op or voice is pending, the bot will attempt to put both
-# modes on one line.
-#   aop-delay 0   No delay is used.
-#   aop-delay X   An X second delay is used.
-#   aop-delay X:Y A random delay between X and Y is used.
+#   This is used for autoop, autohalfop, autovoice. If an op or voice joins a
+#   channel while another op or voice is pending, the bot will attempt to put
+#   both modes on one line.
+#     aop-delay 0   No delay is used.
+#     aop-delay X   An X second delay is used.
+#     aop-delay X:Y A random delay between X and Y is used.
 #
 # need-op { putserv "PRIVMSG #lamest :op me cos i'm lame!" }
 #    This setting will make the bot run the script enclosed in brackets
@@ -570,6 +570,10 @@ channel add #lamest {
 #    Op users with the +o flag as soon as they join the channel?
 #    This is insecure and not recommended.
 #
+# authalfoop
+#    Halfop users with the +l flag as soon as they join the channel?
+#    This is insecure and not recommended.
+#
 # bitch
 #    Only let users with +o) flag be opped on the channel?
 #
@@ -578,6 +582,9 @@ channel add #lamest {
 #
 # protectops
 #    Re-op a user with the +o flag if they get deopped?
+#
+# protecthalfops
+#    Re-halfop a user with the +l flag if they get dehalfopped?
 #
 # protectfriends
 #    Re-op a user with the +f flag if they get deopped?
@@ -640,6 +647,7 @@ channel set #lamest +userinvites
 channel set #lamest +greet
 channel set #lamest +protectops
 channel set #lamest +protectfriends
+channel set #lamest +protecthalfops
 channel set #lamest +statuslog
 channel set #lamest +revenge
 channel set #lamest +revengebot
@@ -647,6 +655,7 @@ channel set #lamest +autovoice
 channel set #lamest +cycle
 channel set #lamest +dontkickops
 channel set #lamest -autoop
+channel set #lamest -autohalfop
 channel set #lamest -bitch
 channel set #lamest -secret
 channel set #lamest -shared
