@@ -319,42 +319,54 @@ see also: whom
                       channel
    
    the valid flags under FLAGS are:
-      o   global op (bot will op this user on any channel)
-      m   master (user is a bot master)
-      n   owner (user is the bot owner)
-      t   botnet master (user is a botnet master)
-      x   xfer (user has file-area access)
+      a   global auto-op (user is opped automatically upon joining a channel)
+      b   bot (user is a bot)
+      c   common (see 'help common')
+      d   global deop (user cannot gain ops on any of the bot's channels)
+      e   global nethack-exempt (user is exempted from stopnethack protection)
+      f   global friend (user is not punished for flooding, etc)
+      g   global auto-voice (user is voiced automatically upon joining a channel)
+      h   highlight (use bold text in help/text files)
       j   janitor (user is a file-area master)
-      p   party-line (user has party-line access)
-      c   common (user record is a common-access site)  [see 'help common']
-      u   unshared (not sent to other share-bots)
-      b   bot (user is another bot)
-      d   global deop (user cannot get ops)
-      k   global auto-kick (user kicked & banned automatically)
-      f   global friend (user is not punished for doing bad things)
+      k   global auto-kick (user is kicked and banned automatically)
+      l   global halfop (user has halfop access to all of the bot's channels)
+      m   global master (user has access to almost every feature of the bot)
+      n   global owner (user has absolute control)
+      o   global op (user has op access to all of the bot's channels)
+      p   party-line (user has access to the partyline)
+      q   global quiet (user does not get voice on +autovoice channels.)
+      r   global dehalfop (user cannot gain halfops on any of the bot's channels)
+      t   botnet master (user has access to all features dealing with the botnet.)
+      u   unshared (user record is not sent to other bots.)
       v   global voice (user get +v automatically on +autovoice channels)
-      a   global auto-op (always op this user on join)
-      h   high-light flag, user sees highlighting in text output
-      w   wasop-test (needs wasop test for +stopnethack procedure)
-      e   global exempted from stopnethack
-      g   give auto-voice (works as +a but for voice instead)
+      w   global wasop-test (needs wasop test for +stopnethack procedure)
+      x   xfer (user has file-area access)
+      y   global auto-halfop (user is halfopped automatically upon joining a channel)
+      z   global washalfop-test (needs washalfop test for +stopnethack procedure)
+      
       (plus 26 user-defined flags, A-Z)
    
    each channel that the user has joined will have a specific record
    for it, with the channel-specific flags and possibly an info
    line.  the channel-specific flags are:
-      m   master (user is a master for the channel)
-      n   owner (user is an owner for the channel)
-      o   op (bot will give this user chanop)
-      d   deop (bot will not allow this user to become a chanop)
-      f   friend (user is not punished for doing bad things)
-      k   kick (user is auto-kicked)
-      v   voice (user gets +v automatically on +autovoice channels)
-      q   quiet (user never gets +v on +autovoice channels)
-      a   auto-op (always op this user on join)
+
+      a   auto-op (user is opped automatically upon joining the channel)
+      d   deop (user cannot gain ops on the channel)
+      e   nethack-exempt (user is exempted from stopnethack protection)
+      f   friend (user is not punished for flooding, etc)
+      g   auto-voice (user is voiced automatically upon joining the channel)
+      k   auto-kick (user is kicked and banned automatically)
+      l   halfop (user has halfop access to the channel)
+      m   master (user is a channel master)
+      n   owner (user is a channel owner)
+      o   op (user has op access to the channel)
+      q   quiet (user does not get voice on the channel.)
+      r   dehalfop (user cannot gain halfops on the channel)
+      v   voice (user get +v automatically if the channel is +autovoice)
       w   wasop-test (needs wasop test for +stopnethack procedure)
-      e   exempted from stopnethack
-      g   give auto-voice (works as +a but for voice instead)
+      y   auto-halfop (user is halfopped automatically upon joining the channel)
+      z   washalfop-test (needs washalfop test for +stopnethack procedure)
+
       (plus 26 user-defined flags, A-Z)
    
    hostmasks for the user are displayed on the following lines.
