@@ -10,7 +10,7 @@
  * statement, leave the rest of the file alone, this allows better
  * overlapping patches.
  *
- * $Id: patch.h,v 1.763 2002/06/13 21:22:46 wcc Exp $
+ * $Id: patch.h,v 1.764 2002/06/14 03:46:48 wcc Exp $
  */
 /*
  * Copyright (C) 1997 Robey Pointer
@@ -41,12 +41,12 @@ patch("CVS");			/* CVS version */
  *
  *
  */
-patch("1024003188");		/* current unixtime */
+patch("1024026235");		/* current unixtime */
 /*
  *
  *
  */
-patch("halfop-support2");
+patch("halfop-support3");
 /*
  *
  *
